ResultView: Hotfix for image overlapping bug on iOS (#454)

--- a/src/components/ResultView.css
+++ b/src/components/ResultView.css
@@ -51,7 +51,7 @@
     padding-left: 0px;
     padding-top: 0px;
     object-position: center;
-    max-height: 160px;
+    height: 160px;
   }
 
   .sui-result__image img {
